Fix the issue of overflowing button text

--- a/ArduinoFrontend/src/app/dashboard/dashboard.component.css
+++ b/ArduinoFrontend/src/app/dashboard/dashboard.component.css
@@ -72,6 +72,10 @@ button[type="submit"] {
 .act-buttons button {
   margin-left: 10px;
   margin-bottom: 10px;
+  padding: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .share-btns {
